--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -4,3 +4,5 @@ $backgroundPageColour   : #E1E9F0;
 $pageTextColour         : #999;
 $majorColour            : #007BA6;
 $minorColour            : #8696A4;
+$minorGrey              : #F7F7F7;
+$mediumGrey             : silver;
