--- a/portal/src/main/sass/jquery/_collapsible-list.scss
+++ b/portal/src/main/sass/jquery/_collapsible-list.scss
@@ -1,19 +1,20 @@
 .collapsible-list {
-
+    
     h1, li { line-height: normal; }
-
+    
     &, ul { list-style: none; }
-
+    
     background-color: #F7F7F7;
+    
     h1 {
         color: black;
         font-size: 1em;
-        font-weight: bold;
+        font-weight: normal;
         margin: 0;
         font-size: 1em;
         padding: 0;
     }
-
+    
     span.collapsible-list-icon {
         display: block;
         float:left;
