--- a/portal/src/main/sass/jquery/_collapsible-list.scss
+++ b/portal/src/main/sass/jquery/_collapsible-list.scss
@@ -4,13 +4,12 @@
     
     &, ul { list-style: none; }
     
-    background-color: #F7F7F7;
-    
     h1 {
         color: black;
         font-size: 1em;
         font-weight: normal;
-        margin: 0;
+        margin-left: 15px;
+        margin-bottom: 0;
         font-size: 1em;
         padding: 0;
     }
