--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -91,4 +91,14 @@ body {
     }
     
     p { margin-top: 1em;}
+    
+    .nbn-navigation {
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 10px;
+        padding: 10px;
+        background-color: $minorGrey;
+        border: 1px solid $mediumGrey;
+    }
+    
 }
