NBNV-36 removed NBNCore sql in api, also added species count to designation taxon groups

--- a/portal/src/main/sass/jquery/_collapsible-list.scss
+++ b/portal/src/main/sass/jquery/_collapsible-list.scss
@@ -5,6 +5,7 @@
     &, ul { list-style: none; }
     
     h1 {
+        font-family: Arial,Helvetica,Sans-serif;
         color: black;
         font-size: 1em;
         font-weight: normal;
