--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -101,4 +101,8 @@ body {
         border: 1px solid $mediumGrey;
     }
     
+    .nbn-taxon-name{
+        font-style: italic;    
+    }
+    
 }
