Fixing position of header and reindenting error pages

--- a/portal/src/main/sass/_header.scss
+++ b/portal/src/main/sass/_header.scss
@@ -20,6 +20,7 @@
         float:left;
         position:relative;
         padding:0;
+        margin:0;
         background: $majorColour image-url("nav_bg.png") repeat-x;
 
         li {
