--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -4,7 +4,7 @@
 @import "_header";
 @import "_footer";
 @import "_designation";
-@import "_search";
+@import "_paginator";
 @import "jquery/_collapsible-list";
 @import "icons/*.png";
 
