NBNV-110 resolved some styling issues and added ajax powered site list to site tab of a site dataset's metadata

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -120,4 +120,18 @@ body {
         font-style: italic;    
     }
     
+    .nbn-dataset-table{
+        $padding: 5px;
+        font-family: Arial,Helvetica,Sans-serif;
+        padding: 1px;
+        th {
+            font-weight: bold;
+            width: 25%;
+            padding: $padding;
+        }
+        td{
+            padding: $padding;
+        }
+    }
+    
 }
