NBNV-110 resolved more styling issues on dataset list datatable

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -5,6 +5,7 @@
 @import "_footer";
 @import "_designation";
 @import "_paginator";
+@import "_datatable";
 @import "jquery/_collapsible-list";
 @import "icons/*.png";
 
