NBNV-116 added to temporal metadata: additional info. (plus rest services),, chart zooming, more js tidying

--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -6,3 +6,4 @@ $majorColour            : #007BA6;
 $minorColour            : #8696A4;
 $minorGrey              : #F7F7F7;
 $mediumGrey             : silver;
+$majorGrey              : #808080;
