--- a/portal/src/main/sass/_datatable.scss
+++ b/portal/src/main/sass/_datatable.scss
@@ -14,3 +14,8 @@
     span.DataTables_sort_icon {
             float: right;
     }
+
+    .ui-buttonset .ui-button{
+        padding: 0.3em !important;
+    }
+    
