NBNV-127 extended dataset and organisation services, added page - dataset parsing logic not finished

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -6,6 +6,7 @@
 @import "_designation";
 @import "_paginator";
 @import "_datatable";
+@import "_organisation";
 @import "jquery/_collapsible-list";
 @import "icons/*.png";
 
