--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -191,7 +191,9 @@ body {
         }
     }
     
-    .nbn-provider-logo{
+    #nbn-provider-logo{
+        float: left;
+        margin-right: 10px;
     }
 
 }
