added species counts to taxon dataset species list

--- a/portal/src/main/sass/_datatable.scss
+++ b/portal/src/main/sass/_datatable.scss
@@ -19,3 +19,17 @@
         padding: 0.3em !important;
     }
     
+    .nbn-align-right{
+        text-align: right;
+    }
+    
+    .nbn-align-centre{
+        text-align: center;
+    }
+    
+    .nbn-datatable-generic {
+        a {
+            color: #007BA6 !important;
+            text-decoration: underline !important;
+        }
+    }
