--- a/portal/src/main/sass/_datatable.scss
+++ b/portal/src/main/sass/_datatable.scss
@@ -27,9 +27,7 @@
         text-align: center;
     }
     
-    .nbn-datatable-generic {
-        a {
-            color: #007BA6 !important;
-            text-decoration: underline !important;
-        }
+    .nbn-datatable-anchor {
+        color: #007BA6 !important;
+        text-decoration: underline !important;
     }
