--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -121,6 +121,21 @@ body {
     .nbn-taxon-name{
         font-style: italic; 
     }
+
+    .nbn-simple-table{
+        $padding: 3px;
+        font-family: Arial,Helvetica,Sans-serif;
+        padding: 1px;
+        width: 100%;
+        th {
+            font-weight: bold;
+            width: 25%;
+            padding: $padding;
+        }
+        td{
+            padding: $padding;
+        }
+    }
     
     .nbn-dataset-table{
         $padding: 3px;
@@ -198,8 +213,6 @@ body {
             font-weight: bold;
             width: 20%;
             padding-left: 5px;
-        }
-        td{
         }
     }
     
