--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -5,5 +5,6 @@ $pageTextColour         : #999;
 $majorColour            : #007BA6;
 $minorColour            : #8696A4;
 $minorGrey              : #F7F7F7;
+$minorToMediumGrey      : #F0F0F0;
 $mediumGrey             : silver;
 $majorGrey              : #808080;
