records on site-record page grouped by dataset

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -149,6 +149,14 @@ body {
             color: white;
             background-color: $majorColour;
             padding: 5px;
+            a{
+                color: white;
+            }
+            h4{
+                font-weight: bold;
+                font-size: 1em;
+                color: white;
+            }
         }
     }
 
