NBNV-151 sorted out dataset selection interactions

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -293,8 +293,12 @@ body {
         font-weight: bold;
     }
 
-    .nbn-designation-dropdown{
+    .nbn-report-filter-dropdown{
         width: 15em;
+    }
+
+    #nbn-select-datasets-text{
+        float: right;
     }
 
 }
