--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -180,6 +180,14 @@ body {
         border-right: 1px solid $majorColour;
     }
 
+    td.nbn-td-contents-centre {
+        text-align: center;
+    }
+
+    td.nbn-td-contents-top {
+        vertical-align: top;
+    }
+
     tr.nbn-emphasise-row {
         background-color: $minorToMediumGrey;
         font-weight: bold;
@@ -328,6 +336,24 @@ body {
 
     .nbn-clear-floating-elements{
         clear: both;
+    }
+    
+    .nbn-colour-picker {
+        background: url('/img/colourpicker/select.png');
+        width: 36px;
+        height: 36px;
+        display: inline-block;
+        margin-left: 5px;
+        margin-bottom: 5px;
+        vertical-align: middle;
+        div{
+            position: relative;
+            top: 3px;
+            left: 3px;
+            width: 30px;
+            height: 30px;
+            background: url('/img/colourpicker/select.png') center;
+        }
     }
 
 }
