Added the ability to select an existing dataset for update, currently doesn't grab the checkbox options, but the rest of the metadata is grabbed an put into the form. The dataset identifier is carried on to the EML in the alternateIdenifier tag, tag is left blank if this is a new dataset upload.

--- a/importer.ui/src/main/webapp/importer.css
+++ b/importer.ui/src/main/webapp/importer.css
@@ -13,7 +13,29 @@ root {
 .formlabel {
     float: left;
     display: inline-block;
+    vertical-align: middle;
     width: 150px;
+}
+
+.optionHead {
+    height: 7.5em;
+}
+
+#uploadMetadata {
+    float: left;
+    height: 9em;
+    width: 50%;
+}
+
+#updateDataset {
+    float: right;
+    height: 10em;
+    width: 50%;
+}
+
+#metadata {
+    width: 100%;
+    clear: both;
 }
 
 input.wide {
