NBNV-214 layer interaction and styling tweaks

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -327,4 +327,10 @@ body {
         font-size: 1.2em
     }
 
+    .nbn-centre-element{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
 }
