--- a/portal/src/main/sass/gridmap.scss
+++ b/portal/src/main/sass/gridmap.scss
@@ -13,14 +13,13 @@
         display: inline-block;
     }
 
-    #nbn-grid-map-image{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
     #nbn-grid-map-busy-image{
         position: absolute;
         top: 50%;
         left: 50%;
+    }
+
+    #nbn-background-checkbox-group{
+        width: 50%;
+        float: left;
     }
