minor stlying for ff and ie

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -133,6 +133,10 @@ body {
             display: block;
             margin: 0 #{-$padding} $padding;
         }
+        select {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
     }
     
     .nbn-taxon-name{
