fixed overlay layers on grid map, and lots of changes to site observations, but not finished

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -129,16 +129,46 @@ body {
         padding-top: 0;
         padding-left: $padding;
         padding-right: $padding;
-        padding-bottom: $padding;
         h1, h2, h3 {
             @include contrasted($majorColour, #000000, #ffffff, 50%);
             padding: 0.5em;
             display: block;
             margin: 0 #{-$padding} $padding;
+            a {
+                @include contrasted($majorColour, #000000, #ffff00, 50%);
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+        }
+        h4 {
+            @include contrasted($veryMinorColour, #000000, #ffffff, 50%);
+            padding: 0.5em;
+            display: block;
+            margin: #{-$padding} #{-$padding} 0px;
+            font-size: 1.1em;
+            a {
+                @include contrasted($veryMinorColour, #000000, #ffff00, 50%);
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
         }
         select {
             margin-top: 5px;
             margin-bottom: 5px;
+        }
+        table#nbn-tabbed-heading-table{
+            border: 1px solid black;
+            margin: #{-$padding};
+            td:first-child{
+                width: 11%;
+            }
+            td{
+                padding: $padding;
+            }
         }
     }
     
