--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -4,6 +4,7 @@ $backgroundPageColour   : #E1E9F0;
 $pageTextColour         : #999;
 $majorColour            : #007BA6;
 $minorColour            : #8696A4;
+$veryMinorColour        : #dbf0f7;
 $minorGrey              : #F7F7F7;
 $minorToMediumGrey      : #F0F0F0;
 $mediumGrey             : silver;
