--- a/portal/src/main/sass/site-report.scss
+++ b/portal/src/main/sass/site-report.scss
@@ -1,21 +1,28 @@
-    #nbn-site-report-filter-container{
-        width: 31%;
-        float: left;
-    }
+@import "compass/utilities/general/clearfix";
 
-    #nbn-site-report-data-container{
-        width: 25%;
-        display: inline-block;
-        position: relative;
-        float: left;
-    }
+#nbn-site-report-filter-container{
+    width: 31%;
+    float: left;
+}
 
-    #nbn-site-report-map{
-        width: 35%;
-        display: inline-block;
-        position: relative;
-    }
+#nbn-site-report-data-container{
+    width: 25%;
+    display: inline-block;
+    position: relative;
+    float: left;
+}
 
-    #nbn-dataset-selector-container{
-        display: inline-block;
-    }
+#nbn-site-report-map{
+    width: 35%;
+    display: inline-block;
+    position: relative;
+}
+
+#nbn-dataset-selector-container{
+    display: inline-block;
+}
+
+#nbn-observation-container{
+    @include clearfix;
+    overflow: visible;
+}
