--- a/portal/src/main/sass/taxon-page.scss
+++ b/portal/src/main/sass/taxon-page.scss
@@ -1,9 +1,16 @@
     #nbn-taxon-page-taxonomy-container{
         width: 62%;
+        display: inline-block;
         float: left;
     }
 
     #nbn-grid-map-container{
+        width: 33%;
+        display: inline-block;
+        position: relative;
+    }
+
+    #nbn-taxon-page-right-container{
         width: 33%;
         display: inline-block;
         position: relative;
@@ -22,4 +29,9 @@
     #nbn-background-checkbox-group{
         width: 50%;
         float: left;
+    }
+
+    div.nbn-taxon-page-list{
+        padding-top: 2px;
+        padding-bottom: 2px;
     }
