--- a/portal/src/main/sass/taxon-page.scss
+++ b/portal/src/main/sass/taxon-page.scss
@@ -1,4 +1,4 @@
-    #nbn-taxon-page-taxonomy-container{
+    .nbn-taxon-page-taxonomy-container{
         width: 62%;
         display: inline-block;
         float: left;
@@ -10,7 +10,7 @@
         position: relative;
     }
 
-    #nbn-taxon-page-right-container{
+    .nbn-taxon-page-right-container{
         width: 33%;
         display: inline-block;
         position: relative;
@@ -34,4 +34,8 @@
     div.nbn-taxon-page-list{
         padding-top: 2px;
         padding-bottom: 2px;
+    }
+
+    span.nbn-taxon-page-indent{
+        width: 2em;
     }
