BUGFIX: No parent

--- a/portal/src/main/sass/taxon-page.scss
+++ b/portal/src/main/sass/taxon-page.scss
@@ -2,6 +2,7 @@
         width: 62%;
         display: inline-block;
         float: left;
+        position: relative;
     }
 
     #nbn-grid-map-container{
