Placeholder dataset list

--- a/portal/src/main/sass/taxon-page.scss
+++ b/portal/src/main/sass/taxon-page.scss
@@ -5,6 +5,11 @@
         position: relative;
     }
 
+    .nbn-taxon-page-dataset-container{
+        width: 95%;
+        display: block;
+    }
+
     #nbn-grid-map-container{
         width: 33%;
         display: inline-block;
