added image links to taxon page

--- a/portal/src/main/sass/taxon-page.scss
+++ b/portal/src/main/sass/taxon-page.scss
@@ -45,3 +45,9 @@
     span.nbn-taxon-page-indent{
         width: 2em;
     }
+
+    img.nbn-taxon-page-link-img{
+        border: 1px black solid;
+        vertical-align: middle;
+        margin-right: 5px;
+    }
