removing old libraries and styling sso

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -2,9 +2,11 @@
 @import "compass/css3/border-radius";
 @import "compass/utilities/general/clearfix";
 @import "_nbn-colour-scheme";
+@import "_message";
 @import "_header";
 @import "_footer";
 @import "_designation";
+@import "_sso";
 @import "_paginator";
 @import "_datatable";
 @import "_organisation";
