--- a/portal/src/main/sass/_header.scss
+++ b/portal/src/main/sass/_header.scss
@@ -15,6 +15,8 @@
         text-indent: -9999px;
     }
     
+    div { text-align: right; }
+
     form { margin-top: 30px; float: right; }
 
     ul {
@@ -41,8 +43,4 @@
 
         .first:hover { @include border-left-radius(5px); }
     }
-}
-
-.nbn-login-text {
-    text-align: right;
 }
