Datatable now used for long species lists on species site report page

--- a/portal/src/main/sass/site-report.scss
+++ b/portal/src/main/sass/site-report.scss
@@ -30,3 +30,11 @@
 #nbn-site-observation-attribute-select{
     width: 6em;
 }
+
+#nbn-species-table_paginate{
+    float: left;
+}
+
+#nbn-species-table_filter{
+    float: left;
+}
