--- a/portal/src/main/sass/_sso.scss
+++ b/portal/src/main/sass/_sso.scss
@@ -19,8 +19,8 @@
         width: 300px;
         height: 2em;
     }
-    
-    input { padding: 0.5em;  }
 
-    .sign-up { margin-top: 20px; }
+    label[for="remember"] { width: auto; float: none; }
+    
+    input { padding: 0.5em;  margin-bottom: 2em; }
 }
