NBNV-246 finished 'site list for a species' page'

--- a/portal/src/main/sass/species-site-list.scss
+++ b/portal/src/main/sass/species-site-list.scss
@@ -1,7 +1,21 @@
 #nbn-species-table_paginate{
-    float: left;
+    float: right;
 }
 
 #nbn-species-table_filter{
+    float: right;
+}
+
+#nbn-year-range-filter{
     float: left;
+    margin-left: 10em;
+    margin-right: 10em;
+}
+
+#nbn-species-site-list-container{
+    margin-bottom: 2em;
+}
+
+#nbn-site-list-filter-container{
+    margin-bottom: 2em;
 }
