NBNV-247 organisation table now styled up and displaying the different datasets provided by that org

--- a/portal/src/main/sass/organisation.scss
+++ b/portal/src/main/sass/organisation.scss
@@ -6,3 +6,11 @@
 #nbn-organisation-contact-details{
     padding-left: 30px;
 }
+
+.nbn-org-datasets-title-td{
+    width: 30%;
+}
+
+.nbn-organisation-tabbed{
+    margin-bottom: 2em !important;
+}
