some tables didn't have correct yellow border, now fixed

--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -183,7 +183,7 @@ body {
     table.nbn-simple-table{
         font-family: Arial,Helvetica,Sans-serif;
         width: 100%;
-        border-collapse: separate;
+        border-collapse: collapse;
         margin-bottom: 20px;
         th{
             padding: 1px;
